<resources>
    <string name="app_name">Find n Hire</string>
    <string name="title_activity_user_menu">UserMenu</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Mobile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_post">Post</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_howwework">How We Work</string>

    <string name="menu_helpline">HelpLine</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_privacypolicy">Privacy Policy</string>
    <string name="menu_logout">Logout</string>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="categories">
        <item>Painter</item>
        <item>Carpenter</item>
        <item>Plumber</item>
        <item>Labour</item>
        <item>Ac Repairer</item>
    </string-array>

    <string name="firebase_server_key">AAAAqcC1nic:APA91bHI3BPlGWsb3-FMTaASbbxN0S2D31sYKw9eTbnlvmNM51NoFACFxkGRdOwu9PGbKsOnGrNrXDyDKot9MMj63SxoG7QzXsx7AI-o7Td-goKJOZbTlofrWr-ZmqmkFOi4V7P72Mt6</string>

</resources>