<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="5dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imageViewUserId"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_baseline_account_circle_24"
        android:contentDescription="@string/nav_header_desc"
        android:scaleType="centerInside"
        app:civ_border="false"
        app:civ_shadow="false" />

    <TextView
        android:id="@+id/usernameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nav_header_title"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/darkblue"
        android:textColorHint="#8592A5" />

    <TextView
        android:id="@+id/mobileUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nav_header_subtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/darkblue"
        android:textColorHint="#8592A5" />
</LinearLayout>